# dockerproject

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: buses_routes.py  config.py  database.py  main.py  routes.py  user_repo.py
app/auth/: jwt_auth.py  utils.py
app/busesdb/: models.py  schemas.py
app/migration/: env.py
app/migration/versions/: e757c37d5e5b_initial.py
app/repo/: buses_in_company_repo.py  buses_repo.py  company_repo.py  delays_voyage_repo.py  driver_repo.py  order_repair_repo.py  passengers_repo.py  report_income_company_repo.py  review_passenger_repo.py  route_sheet_repo.py  routes_repo.py  stops_and_routes_repo.py  stops_repo.py  tickets_repo.py  type_repair_repo.py  user_repo.py
app/routes/: buses_in_company_routes.py  buses_routes.py  company_routes.py  delay_voyage_routes.py  driver_routes.py  order_repair_routes.py  passenger_routes.py  report_income_company_routes.py  review_passenger_routes.py  route_routes.py  route_sheet_routes.py  stop_routes.py  stops_and_routes_routes.py  ticket_routes.py  type_repair_routes.py  user_routes.py
busesdb/: models.py
migration/: env.py  script.py.mako
migration/versions/: 1a4b6e48e969_initial.py  a16ac989b4f1_add_all_table.py
src/app/: buses_routes.py  main.py  routes.py  user_repo.py
src/app/migration/: env.py
src/busesdb/: schemas.py
