[tool.poetry]
name = "dockerproject"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dmitrizhivoderov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
